Changes to resume.html
changed languages section from series list to a <ul> list

--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,11 @@
 			<h4>Skills</h4>
 			<p>Languages: JavaScript, Python, HTML and CSS</p>
 			<p>Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
-			<p>Languages: English, Español, 日本語</p>
+			<p>Languages:
+				<ul>English</ul>
+				<ul>Español</ul>
+				<ul>日本語</ul>
+			</p>
 			<h4>Education</h4>
 			<p>BS, Linguistics | UC Berkeley, 2017</p>
 			<ul>
