Changes to stylesheet.css
Changed asian font

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
 			<p>Languages:
 				<ul>English</ul>
 				<ul>Español</ul>
-				<ul>日本語</ul>
+				<ul id='asian'>日本語</ul>
 			</p>
 			<h4>Education</h4>
 			<p>BS, Linguistics | UC Berkeley, 2017</p>
