Edits to resume.html and changes to stylesheet.css
updated information on resume.html;
edited height attribute

--- a/resume.html
+++ b/resume.html
@@ -12,9 +12,9 @@
 		<div class="left"></div>
 		<div class="right">
 			<h4>Objective</h4>
-			<p>To take a position as a software engineer.</p>
+			<p>Take a position as a web designer.</p>
 			<h4>Experience</h4>
-			<p>Web Designer, Administrative Assitant | Austral Housing Inspections (June 2014 - Present)</p>
+			<p>Web Designer, Administrative Assitant | Austral Housing Inspections (June 2014 - August 2014)</p>
 			<ul>
 				<li>Designed and created website from scratch, noting the preferences of the intended audience.</li>
 				<li>Prepared reports to be used in legal courts. Favorable outcomes for client on most reports.</li>
@@ -25,12 +25,13 @@
 			<p>Languages:
 				<ul>English</ul>
 				<ul>Español</ul>
+				<ul id='asian'>中文</ul>
 				<ul id='asian'>日本語</ul>
 			</p>
 			<h4>Education</h4>
-			<p>BS, Linguistics | UC Berkeley, 2017</p>
+			<p>BS, Cognitive Science | UC Berkeley, 2017</p>
 			<ul>
-				<li>Emphasis in Computer and Human Interface</li>
+				<li>Emphasis in Human-Computer Interface and East-Asian Linguistics</li>
 				<li>GPA: 3.8</li>
 			</ul>
 		</div>
