amateur mistake on resume.html
added li tags to list items

--- a/resume.html
+++ b/resume.html
@@ -23,10 +23,12 @@
 			<p>Languages: JavaScript, Python, HTML and CSS</p>
 			<p>Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
 			<p>Languages:
-				<ul>English</ul>
-				<ul>Español</ul>
-				<ul id='asian'>中文</ul>
-				<ul id='asian'>日本語</ul>
+			<ul>
+				<li>English</li>
+				<li>Español</li>
+				<li id='asian'>中文</li>
+				<li id='asian'>日本語</li>
+			</ul>
 			</p>
 			<h4>Education</h4>
 			<p>BS, Cognitive Science | UC Berkeley, 2017</p>
