Changes to index.html
Added paragraph text and linked to stylesheet.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<title></title>
+	</head>
 <body>
-<h1>Hello World</h1>
+<h1>Maralkan</h1>
+<p>Hello world!</p>
 <p>I'm hosted with GitHub Pages.</p>
 <a href='resume.html'>click for sample resume</a>
 </body>
