Changes to index.html and stylesheet.css
Updated content in index.html;
stylesheet.css: addition of sitemast, a, body, footer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title></title>
+		<title>Personal Website</title>
 	</head>
 <body>
-<h1>Maralkan</h1>
-<p>Hello world!</p>
-<p>I'm hosted with GitHub Pages.</p>
-<a href='resume.html'>click for sample resume</a>
+	<div id="sitemast">
+		<h1><a href="/">Maralkan</a></h1>
+	</div>
+	<div class="body">
+		<p><a href='resume.html'>click for sample resume</a></p>
+		<p>Line</p>
+		<p>I'm hosted with GitHub Pages.</p>
+	</div>
+	<footer>
+		<p>Marvin Alcantara</p>
+	</footer>
 </body>
 </html>
