Changes to index.html and stylesheet.css
Changed appearance of footer in index.html;
removed bolding effect on a:hover

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<div class="body">
 		<p><a href='resume.html'>click for sample resume</a></p>
 		<p>Line</p>
-		<p>I'm hosted with GitHub Pages.</p>
 	</div>
 	<footer>
-		<p>Marvin Alcantara</p>
+		<p id="host">I'm hosted with GitHub Pages.</p>
+		<p id="author">Marvin Alcantara</p>
 	</footer>
 </body>
 </html>
