Changes to index.html, resume.html, stylesheet.css
Reduced div border-radius;
changed spacing for content in resume.html;
Added titles to pages;
updated content in resume.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>Personal Website</title>
+		<title>Marvin Alcantara</title>
 	</head>
 <body>
 	<div id="sitemast">
