--- a/resume.html
+++ b/resume.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title></title>
+		<title>Resume | Marvin Alcantara</title>
 	</head>
 	<body>
 		<div id="header">
-	   		<p id="name">Marvin Alcantara</p>
+	   		<p id="name"><a href="/">Marvin Alcantara</a></p>
 	   		<a href="mailto:marveen1520@gmail.com"><p id="email">marveen1520@gmail.com</p></a>
 		</div>
 		<div class="left"></div>
@@ -21,7 +21,7 @@
 			</ul>
 			<h4>Skills</h4>
 			<p>Languages: JavaScript, Python, HTML and CSS</p>
-			<p>Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
+			<p>Frameworks: .NET, Node.js, Django</p>
 			<p>Languages:
 			<ul>
 				<li>English</li>
