--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<link rel="stylesheet" href="animate.min.css">
 		<title>Marvin Alcantara</title>
 	</head>
 <body>
@@ -10,7 +11,7 @@
 	</div>
 	<div class="body">
 		<p><a href='resume.html'>click for sample resume</a></p>
-		<p>Line</p>
+		<p class="animated infinite bounce">Bouncy line</p>
 	</div>
 	<footer>
 		<p id="host">I'm hosted with GitHub Pages.</p>
