--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<link rel="stylesheet" href="animate.min.css">
 		<title>Resume | Marvin Alcantara</title>
 	</head>
 	<body>
