Added new page and font-awesome files
New page has a video background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</div>
 	<div class="body">
 		<p><a href='resume.html'>click for sample resume</a></p>
-		<p class="animated infinite bounce">Bouncy line</p>
+		<p class="animated infinite pulse">Pulsing line</p>
 	</div>
 	<footer>
 		<p id="host">I'm hosted with GitHub Pages.</p>
