--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<div class="body">
 		<p><a href='resume.html'>click for sample resume</a></p>
 		<p class="animated infinite pulse">Pulsing line</p>
+		<p><a href="video-background.html">click for video background</a></p>
 	</div>
 	<footer>
 		<p id="host">I'm hosted with GitHub Pages.</p>
