Removed unnecessary files changed js file directory
what the title says

--- a/video-background.html
+++ b/video-background.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link type="text/css" rel="stylesheet" href="bckvid-stylesheet.css"/>
-	<script type="text/javascript" href="YTPlayer/inc/jquery.mb.YTPlayer.js"></script>
+	<script src="js/jquery.mb.YTPlayer.js"></script>
 	<title>[TEST] Video Background | Marvin Alcantara</title>
 </head>
 <body>
