Add YTPlayer Script to vid-bckg.html
enables YTPlayer... hopefully...

--- a/video-background.html
+++ b/video-background.html
@@ -41,5 +41,10 @@
             </div>
         </section>
     </div>
+    <script type="text/javascript">
+    $(function(){
+    $(".player").mb_YTPlayer();
+  });
+    </script>
 </body>
 </html>
