--- a/video-background.html
+++ b/video-background.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Marvin Alcantara">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="bckvid-stylesheet.css"/ media-"all">
+	<link type="text/css" rel="stylesheet" href="bckvid-stylesheet.css" media="all">
 	<script src="js/jquery.mb.YTPlayer.js"></script>
 </head>
 <body>
