--- a/video-background.html
+++ b/video-background.html
@@ -9,8 +9,7 @@
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="bckvid-stylesheet.css" media="all">
 
-	<script src="js/jquery.mb.YTPlayer.js"></script>
-    <script type="text/javascript">
+	<script src="js/jquery.mb.YTPlayer.js">
     $(function() {
         $(".player.mb_YTPlayer()");
     });
