--- a/video-background.html
+++ b/video-background.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>[TEST] Building a Video Background</title>
-
     <meta name="author" content="Marvin Alcantara">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+
+    <link rel="stylesheet" href="css/normalize.css" media="all">
+    <link rel="stylesheet" href="css/style.css" media="all">
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="bckvid-stylesheet.css" media="all">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-	<script src="js/jquery.mb.YTPlayer.js">
-    $(function() {
-        $(".player.mb_YTPlayer()");
-    });
-    </script>
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/device.min.js"></script> <!--OPTIONAL JQUERY PLUGIN-->
+    <script src="js/jquery.mb.YTPlayer.js"></script>
+    <script src="js/custom.js"></script>
+    
+    <meta name="robots" content="noindex,follow" />
 </head>
 <body>
     <section class="big-background">
@@ -23,17 +28,15 @@
             <h1 class="big-background-title">YOUTUBE</h1>
             <div class="divider"></div>
             <h1 id="colorize">VIDEO BACKGROUND</h1>
-            <a href="http://designmodo.com/video-background-website/" class="big-background-btn">Back to the Article</a>
+            <a href="/" class="big-background-btn">Back to Maralkan</a>
         </div>
     </section>
     <div class="wrapper">
     	<section class="about-section">
-            <div class='about-section-container'>
-            	<h2 class='about-section-title'>
-            		JUST A COOL YOUTUBE VIDEO BACKGROUND
-            	</h2>
-            	<p>Wondering how you might add a video background?</p>
-            	<a href="https://github.com/pupunzi/jquery.mb.YTPlayer" target="_blank" class="about-section-btn">Check it here</a>
+            <div class="about-section-container">
+                <h2 class="about-section-title">USE A COOL YOUTUBE VIDEO BACKGROUND</h2>
+                <p>Wondering how you might add a video background on your site? <br/>It's so easy! Introducing jQuery MB.YTPlayer, a jQuery plugin that enables you to display Youtube videos on your webpages. <br/>It's so awesome that it can transform your Youtube video into an HTML background at ease! No slow server loading time!</p>
+                <a href="https://github.com/pupunzi/jquery.mb.YTPlayer" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
         <section class="small-background-section">
@@ -41,9 +44,8 @@
             <div class="small-background-container">
             	<h2 class="small-background-title"><span>Find us on social media</span></h2>
             	<ul class="socials">
-            		<li><a href="https://www.facebook.com/designmodo" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-            		<li><a href="https://www.twitter.com/Designmodo" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a></li>
-            		<li><a href="https://plus.google.com/+Designmodo" target="_blank"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+            		<li><a href="https://www.facebook.com/acts2fellowship" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+            		<li><a href="https://tumblr.com/calastro" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
             	</ul>
             </div>
         </section>
