--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<link rel="stylesheet" href="animate.min.css">
+		<link type="text/css" rel="stylesheet" href="css/stylesheet.css">
 		<title>Marvin Alcantara</title>
 	</head>
 <body>
@@ -11,7 +10,7 @@
 	</div>
 	<div class="body">
 		<p><a href='resume.html'>click for sample resume</a></p>
-		<p class="animated infinite pulse">Pulsing line</p>
+		<p></p>
 		<p><a href="video-background.html">click for video background</a></p>
 	</div>
 	<footer>
