--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<link rel="stylesheet" href="animate.min.css">
+		<link type="text/css" rel="stylesheet" href="css/stylesheet.css">
 		<title>Resume | Marvin Alcantara</title>
 	</head>
 	<body>
