--- a/video-background.html
+++ b/video-background.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>[TEST] Building a Video Background</title>
+    <title>Video Background [TEST]</title>
     <meta name="author" content="Marvin Alcantara">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
@@ -23,11 +23,11 @@
 <body>
     <section class="big-background">
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
-        <div class="pattern"></div> 
+        <div class="pattern"></div>
         <div class="big-background-container">
             <h1 class="big-background-title">YOUTUBE</h1>
             <div class="divider"></div>
-            <h1 id="colorize">VIDEO BACKGROUND</h1>
+            <h1 id="colorize">Costa Rica</h1>
             <a href="/" class="big-background-btn">Back to Maralkan</a>
         </div>
     </section>
@@ -42,11 +42,9 @@
         <section class="small-background-section">
             <div class='pattern'></div>
             <div class="small-background-container">
-            	<h2 class="small-background-title"><span>Find us on social media</span></h2>
-            	<ul class="socials">
-            		<li><a href="https://www.facebook.com/acts2fellowship" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-            		<li><a href="https://tumblr.com/calastro" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
-            	</ul>
+            	<h2 class="small-background-title"><span>Find me on WordPress</span></h2>
+                <p/>
+                <a href="https://maralkan.wordpress.com/" class="big-background-btn">MARALKAN</a>
             </div>
         </section>
     </div>
