--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css">
-		<title>Resume | Marvin Alcantara</title>
+		<title>Sample Resume | Marvin Alcantara</title>
 	</head>
 	<body>
 		<div id="header">
