--- a/video-background.html
+++ b/video-background.html
@@ -34,9 +34,9 @@
     <div class="wrapper">
     	<section class="about-section">
             <div class="about-section-container">
-                <h2 class="about-section-title">USE A COOL YOUTUBE VIDEO BACKGROUND</h2>
-                <p>Wondering how you might add a video background on your site? <br/>It's so easy! Introducing jQuery MB.YTPlayer, a jQuery plugin that enables you to display Youtube videos on your webpages. <br/>It's so awesome that it can transform your Youtube video into an HTML background at ease! No slow server loading time!</p>
-                <a href="https://github.com/pupunzi/jquery.mb.YTPlayer" target="_blank" class="about-section-btn">Check it here</a>
+                <h2 class="about-section-title">I'M A COG SCI STUDENT AT UC BERKELEY</h2>
+                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective.<br>Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields,</br>to illuminate how the human mind works, and why it works the way it does.</p>
+                <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
         <section class="small-background-section">
@@ -45,6 +45,24 @@
             	<h2 class="small-background-title"><span>Find me on WordPress</span></h2>
                 <p/>
                 <a href="https://maralkan.wordpress.com/" class="big-background-btn">MARALKAN</a>
+            </div>
+        </section>
+    </div>
+    <div class="wrapper">
+        <section class="about-section">
+            <div class="about-section-container">
+                <h2 class="about-section-title">I'M PART OF ACTS2FELLOWSHIP</h2>
+                <p>acts2fellowship (a2f) is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships.<br>College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?"</br><br>At a2f, you'll find a safe place to ask those questions and seek answers alongside other college students.</br>Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
+                <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">Check it here</a>
+            </div>
+        </section>
+        <section class="small-background-section">
+            <div class='pattern'></div>
+            <div class="small-background-container">
+                <h2 class="small-background-title"><span>Find us on Social Media</span></h2>
+                <ul>
+                    <li><a href="https://www.facebook.com/acts2fellowship" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                </ul>
             </div>
         </section>
     </div>
