--- a/video-background.html
+++ b/video-background.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css" media="all">
     <link rel="stylesheet" href="css/style.css" media="all">
 
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900|Lobster' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="js/jquery-1.11.1.min.js"></script>
@@ -25,9 +25,9 @@
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
         <div class="big-background-container">
-            <h1 class="big-background-title">YOUTUBE</h1>
+            <h1 class="big-background-title">Marvin Alcantara</h1>
             <div class="divider"></div>
-            <h1 id="colorize">Costa Rica</h1>
+            <h1 id="colorize">INVOLVEMENTS</h1>
             <a href="/" class="big-background-btn">Back to Maralkan</a>
         </div>
     </section>
@@ -42,17 +42,17 @@
         <section class="small-background-section">
             <div class='pattern'></div>
             <div class="small-background-container">
-            	<h2 class="small-background-title"><span>Find me on WordPress</span></h2>
+            	<h2 class="small-background-title"><span>See my first attempt at web coding</span></h2>
                 <p/>
-                <a href="https://maralkan.wordpress.com/" class="big-background-btn">MARALKAN</a>
+                <a href="https://maralkan.wordpress.com/" class="big-background-btn">Check the sample resume</a>
             </div>
         </section>
     </div>
     <div class="wrapper">
         <section class="about-section">
             <div class="about-section-container">
-                <h2 class="about-section-title">I'M PART OF ACTS2FELLOWSHIP</h2>
-                <p>acts2fellowship (a2f) is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships.<br>College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?"</br><br>At a2f, you'll find a safe place to ask those questions and seek answers alongside other college students.</br>Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
+                <h2 class="about-section-title">I'M PART OF <span id="a2f">acts2fellowship</span></h2>
+                <p><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships.<br>College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?"</br><br>At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students.</br>Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
                 <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
@@ -62,6 +62,7 @@
                 <h2 class="small-background-title"><span>Find us on Social Media</span></h2>
                 <ul>
                     <li><a href="https://www.facebook.com/acts2fellowship" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                    <li><a href="https://a2fberkeley.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
                 </ul>
             </div>
         </section>
