--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		<h1><a href="/">Marvin Alcantara</a></h1>
 	</div>
 	<div class="body">
-		<p id="redirect"><a href="video-background.html">See this page</a> in a nicer video background style.</p>
+		<p id="redirect"><a href="video-background.html">See this page</a> in a nicer video background style (desktop version only).</p>
 		<h2 id="webContent">About myself</h2>
 		<h3 id="webContent">I'm a Cognitive Science student at UC Berkeley</h3>
-		<p id="webContent">The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective.<br>Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields,</br>to illuminate how the human mind works, and why it works the way it does.</p>
+		<p id="webContent">The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective. Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
 		<p id="webContent"><a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank">Check it here</a></p>
-		<p id="webContent">I've prepared a <a href='resume.html'>sample resume</a> for your viewing pleasure. Note: it's not my actual resume, it's my ideal resume.<br />It was my first attempt at web page coding. Judge all you like. Feel free to send me feedback.</p>
+		<p id="webContent">I've prepared a <a href='resume.html'>sample resume</a> for your viewing pleasure. Note: it's not my actual resume, it's my ideal resume. It was my first attempt at web page coding. Judge all you like. Feel free to send me feedback.</p>
 		<h3 id="webContent">I'm part of <span id="a2f">acts2fellowship</span></h3>
-		<p id="webContent"><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships. College is<br>the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?"</br><br>At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students. Throughout the week, we also hang</br>out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
+		<p id="webContent"><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships. College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
 		<p id="webContent"><a href="http://www.a2fberkeley.org/" target="_blank">Check it here</a></p>
 	</div>
 	<footer>
