Change to video-background.html
changed "Maralkan" to "static version" to avoid confusion. (index.html
is no longer titled Maralkan)

--- a/video-background.html
+++ b/video-background.html
@@ -28,7 +28,7 @@
             <h1 class="big-background-title">Marvin Alcantara</h1>
             <div class="divider"></div>
             <h1 id="colorize">INVOLVEMENTS</h1>
-            <a href="/" class="big-background-btn">Back to Maralkan</a>
+            <a href="/" class="big-background-btn">Back to static version</a>
         </div>
     </section>
     <div class="wrapper">
