--- a/index.html
+++ b/index.html
@@ -1,28 +1,71 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-		<link type="text/css" rel="stylesheet" href="css/stylesheet.css">
-		<title>Marvin Alcantara</title>
-	</head>
+<head>
+    <meta charset="utf-8">
+    <title>Video Background [TEST]</title>
+    <meta name="author" content="Marvin Alcantara">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+
+    <link rel="stylesheet" href="css/normalize.css" media="all">
+    <link rel="stylesheet" href="css/style.css" media="all">
+
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900|Lobster' rel='stylesheet' type='text/css'>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/device.min.js"></script> <!--OPTIONAL JQUERY PLUGIN-->
+    <script src="js/jquery.mb.YTPlayer.js"></script>
+    <script src="js/custom.js"></script>
+    
+    <meta name="robots" content="noindex,follow" />
+</head>
 <body>
-	<div id="sitemast">
-		<h1><a href="/">Marvin Alcantara</a></h1>
-	</div>
-	<div class="body">
-		<p id="redirect"><a href="video-background.html">See this page</a> in a nicer video background style (desktop version only).</p>
-		<h2 id="webContent">About myself</h2>
-		<h3 id="webContent">I'm a Cognitive Science student at UC Berkeley</h3>
-		<p id="webContent">The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective. Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
-		<p id="webContent"><a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank">Check it here</a></p>
-		<p id="webContent">I've prepared a <a href='resume.html'>sample resume</a> for your viewing pleasure. Note: it's not my actual resume, it's my ideal resume. It was my first attempt at web page coding. Judge all you like. Feel free to send me feedback.</p>
-		<h3 id="webContent">I'm part of <span id="a2f">acts2fellowship</span></h3>
-		<p id="webContent"><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships. College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
-		<p id="webContent"><a href="http://www.a2fberkeley.org/" target="_blank">Check it here</a></p>
-	</div>
-	<footer>
-		<p id="host">I'm hosted with GitHub Pages.</p>
-		<p id="author">Marvin Alcantara</p>
-	</footer>
+    <section class="big-background">
+        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
+        <div class="pattern"></div>
+        <div class="big-background-container">
+            <h1 class="big-background-title">Marvin Alcantara</h1>
+            <div class="divider"></div>
+            <h1 id="colorize">INVOLVEMENTS</h1>
+            <a href="index_static.html" class="big-background-btn">Back to static version</a>
+        </div>
+    </section>
+    <div class="wrapper">
+    	<section class="about-section">
+            <div class="about-section-container">
+                <h2 class="about-section-title">I'M A COG SCI STUDENT AT UC BERKELEY</h2>
+                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective.<br>Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields,</br>to illuminate how the human mind works, and why it works the way it does.</p>
+                <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
+            </div>
+        </section>
+        <section class="small-background-section">
+            <div class='pattern'></div>
+            <div class="small-background-container">
+            	<h2 class="small-background-title"><span>See my first attempt at web coding</span></h2>
+                <p/>
+                <a href="resume.html" class="big-background-btn">Check the sample resume</a>
+            </div>
+        </section>
+    </div>
+    <div class="wrapper">
+        <section class="about-section">
+            <div class="about-section-container">
+                <h2 class="about-section-title">I'M PART OF <span id="a2f">acts2fellowship</span></h2>
+                <p><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships.<br>College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?"</br><br>At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students.</br>Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
+                <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">Check it here</a>
+            </div>
+        </section>
+        <section class="small-background-section">
+            <div class='pattern'></div>
+            <div class="small-background-container">
+                <h2 class="small-background-title"><span>Find us on Social Media</span></h2>
+                <ul>
+                    <li><a href="https://www.facebook.com/acts2fellowship" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                    <li><a href="https://a2fberkeley.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
+                </ul>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
