Changes to index, index_static.html, stylesheet.css
Changed titles of html files;
Added popular Mac/Windows Asian script fonts;

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Video Background [TEST]</title>
+    <title>Marvin Alcantara</title>
     <meta name="author" content="Marvin Alcantara">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
@@ -28,7 +28,7 @@
             <h1 class="big-background-title">Marvin Alcantara</h1>
             <div class="divider"></div>
             <h1 id="colorize">INVOLVEMENTS</h1>
-            <a href="index_static.html" class="big-background-btn">Back to static version</a>
+            <a href="index_static.html" class="big-background-btn">View static / non-pretty version</a>
         </div>
     </section>
     <div class="wrapper">
