--- a/index_static.html
+++ b/index_static.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css">
-		<title>Marvin Alcantara</title>
+		<title>Marvin Alcantara [Static Version]</title>
 	</head>
 <body>
 	<div id="sitemast">
