--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     	<section class="about-section">
             <div class="about-section-container">
                 <h2 class="about-section-title">I'M A COG SCI STUDENT AT UC BERKELEY</h2>
-                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective.<br>Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields,</br>to illuminate how the human mind works, and why it works the way it does.</p>
+                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective.Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
                 <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
@@ -52,7 +52,7 @@
         <section class="about-section">
             <div class="about-section-container">
                 <h2 class="about-section-title">I'M PART OF <span id="a2f">acts2fellowship</span></h2>
-                <p><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships.<br>College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?"</br><br>At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students.</br>Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
+                <p><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships. College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
                 <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
