--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <section class="big-background">
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
+        <nav>
+                <a href="#about-section">About Me</a>
+                <a href="">Work</a>
+                <a href="">Resume</a>
+        </nav>
         <div class="big-background-container">
             <h1 class="big-background-title">Marvin Alcantara</h1>
             <div class="divider"></div>
@@ -34,25 +39,31 @@
     <div class="wrapper">
     	<section class="about-section">
             <div class="about-section-container">
-                <h2 class="about-section-title">I'M A COG SCI STUDENT AT UC BERKELEY</h2>
-                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary perspective.Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
+                <h2 class="about-section-title">Cognitive Science at Cal</h2>
+                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary
+                    perspective.Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and
+                    anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
                 <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
         <section class="small-background-section">
             <div class='pattern'></div>
             <div class="small-background-container">
-            	<h2 class="small-background-title"><span>See my first attempt at web coding</span></h2>
+            	<h2 class="small-background-title"><span>See a new artists theme I've been working on</span></h2>
                 <p/>
-                <a href="resume.html" class="big-background-btn">Check the sample resume</a>
+                <a href="artist-theme.html" class="big-background-btn">Check it here</a>
             </div>
         </section>
     </div>
     <div class="wrapper">
         <section class="about-section">
             <div class="about-section-container">
-                <h2 class="about-section-title">I'M PART OF <span id="a2f">acts2fellowship</span></h2>
-                <p><span id="a2f">acts2fellowship (a2f)</span> is a UC Berkeley student ministry that meets every week to study the Bible and build lasting friendships. College is the perfect time to explore the big questions of life like, "Does God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together, go on fun, memorable trips, and just “do life” together.</p>
+                <h2 class="about-section-title">I'm part of <span id="a2f">acts2fellowship</span></h2>
+                <p><span id="a2f">acts2fellowship</span> (<span id="a2f">a2f</span>) is a UC Berkeley student ministry that meets every week to
+                    study the Bible and build lasting friendships. College is the perfect time to explore the big questions of life like, "Does
+                    God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek
+                    answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together,
+                    go on fun, memorable trips, and just “do life” together.</p>
                 <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
