--- a/artist-theme.html
+++ b/artist-theme.html
@@ -2,7 +2,8 @@
 
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-    <link href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/normalize.css" media="all">
+    <link rel="stylesheet" href="css/style.css" media="all">
     
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/device.min.js"></script> <!--OPTIONAL JQUERY PLUGIN-->
@@ -13,24 +14,24 @@
 
 <body>
     <section class="big-background">
+        <nav>
+            <a href="#about-section">About Me</a>
+            <a href="">Work</a>
+            <a href="">Resume</a>
+        </nav>
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
         <div class="big-background-container">
-            <nav>
-                <a href="">About Me</a>
-                <a href="">Work</a>
-                <a href="">Resume</a>
-            </nav>
-            <h1 class="big-background-title">Marvin Alcantara</h1>
+            <h1 class="big-background-title">Artists Theme</h1>
             <div class="divider"></div>
-            <h1 id="colorize">INVOLVEMENTS</h1>
-            <a href="index_static.html" class="big-background-btn">View static / non-pretty version</a>
+            <h1 id="colorize">Designer // Thinker // Blogger</h1>
+            <a href="index_static.html" class="big-background-btn">View Photographer's Theme</a>
         </div>
     </section>
     <div class="wrapper">
     	<section class="about-section">
             <div class="about-section-container">
-                <h2 class="about-section-title">I'M A COG SCI STUDENT AT UC BERKELEY</h2>
+                <h2 class="about-section-title">Cognitive Science at Cal</h2>
                 <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary
                     perspective.Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and
                     anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
@@ -40,9 +41,9 @@
         <section class="small-background-section">
             <div class='pattern'></div>
             <div class="small-background-container">
-            	<h2 class="small-background-title"><span>See my first attempt at web coding</span></h2>
+            	<h2 class="small-background-title"><span>See a new artists theme I've been working on</span></h2>
                 <p/>
-                <a href="resume.html" class="big-background-btn">Check the sample resume</a>
+                <a href="artist-theme.html" class="big-background-btn">Check it here</a>
             </div>
         </section>
     </div>
