--- a/artist-theme.html
+++ b/artist-theme.html
@@ -41,9 +41,9 @@
         <section class="small-background-section">
             <div class='pattern'></div>
             <div class="small-background-container">
-            	<h2 class="small-background-title"><span>See a new artists theme I've been working on</span></h2>
+            	<h2 class="small-background-title"><span>See videographer's theme I've been working on</span></h2>
                 <p/>
-                <a href="artist-theme.html" class="big-background-btn">Check it here</a>
+                <a href="index.html" class="big-background-btn">Check it here</a>
             </div>
         </section>
     </div>
