Changes to artists, index, style.css
Added font api to artist-theme.html;
added fadein effect to patter on style.css;
Changed title on index.html;

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Marvin Alcantara</title>
+    <title>Videographer's Theme</title>
     <meta name="author" content="Marvin Alcantara">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
