--- a/artist-theme.html
+++ b/artist-theme.html
@@ -1,7 +1,12 @@
 <html>
 
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <meta charset="utf-8">
+    <title>Artists Theme</title>
+    <meta name="author" content="Marvin Alcantara">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900|Lobster' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css" media="all">
     <link rel="stylesheet" href="css/style.css" media="all">
     
