Changes to index.html
updated nav (bookmark links!);
changed title;
begin work on "work" section;

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 <body>
     <section class="big-background">
         <nav>
-            <a href="#about-section">About Me</a>
-            <a href="">Work</a>
-            <a href="">Resume</a>
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="resume.html">Resume</a>
         </nav>
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
         <div class="big-background-container">
-            <h1 class="big-background-title">Marvin Alcantara</h1>
+            <h1 class="big-background-title">Video Theme</h1>
             <div class="divider"></div>
-            <h1 id="colorize">INVOLVEMENTS</h1>
-            <a href="index_static.html" class="big-background-btn">View static / non-pretty version</a>
+            <h1 id="colorize">Designer // Videographer // Blogger</h1>
+<!--            <a href="index_static.html" class="big-background-btn">See my blog</a>-->
         </div>
     </section>
     <div class="wrapper">
-    	<section class="about-section">
+    	<section class="about-section"><a name="about-me"></a>
             <div class="about-section-container">
                 <h2 class="about-section-title">Cognitive Science at Cal</h2>
                 <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary
@@ -46,12 +46,12 @@
                 <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
-        <section class="small-background-section">
+        <section class="small-background-section"><a name="work"></a>
             <div class='pattern'></div>
             <div class="small-background-container">
-            	<h2 class="small-background-title"><span>See a new artists theme I've been working on</span></h2>
+            	<h2 class="small-background-title"><span>See other themes I've been working on</span></h2>
                 <p/>
-                <a href="artist-theme.html" class="big-background-btn">Check it here</a>
+                <a href="artist-theme.html" class="big-background-btn">Artists Theme</a>
             </div>
         </section>
     </div>
@@ -72,8 +72,8 @@
             <div class="small-background-container">
                 <h2 class="small-background-title"><span>Find us on Social Media</span></h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/acts2fellowship" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-                    <li><a href="https://a2fberkeley.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
+                    <li><a href="https://www.facebook.com/acts2fellowship" target="_blank" class="socials"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                    <li><a href="https://a2fberkeley.tumblr.com" target="_blank" class="socials"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
                 </ul>
             </div>
         </section>
