Changes to index.html
Added buttons for all a2f sites;
will work on design tomorrow;

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
             <a href="resume.html">Resume</a>
+            <a href="#about-a2f">A2F</a>
         </nav>
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
@@ -56,15 +57,28 @@
         </section>
     </div>
     <div class="wrapper">
-        <section class="about-section">
+        <section class="about-section"><a name="a2f-about"></a>
             <div class="about-section-container">
                 <h2 class="about-section-title">I'm part of <span id="a2f">acts2fellowship</span></h2>
-                <p><span id="a2f">acts2fellowship</span> (<span id="a2f">a2f</span>) is a UC Berkeley student ministry that meets every week to
+                <p><span id="a2f">acts2fellowship</span> (<span id="a2f">a2f</span>) is a student ministry that meets every week to
                     study the Bible and build lasting friendships. College is the perfect time to explore the big questions of life like, "Does
                     God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek
                     answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together,
                     go on fun, memorable trips, and just “do life” together.</p>
-                <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">Check it here</a>
+                <p>Est. 2006</p>
+                <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">UC Berkeley</a>
+                <p>Est. 2010</p>
+                <a href="http://minnesota.acts2fellowship.org/" target="_blank" class="about-section-btn">UMinn</a>
+                <a href="http://www.a2friverside.org/" target="_blank" class="about-section-btn">UC Riverside</a>
+                <a href="http://www.a2fucsd.org/" target="_blank" class="about-section-btn">UC San Diego</a>
+                <p>Est. 2013</p>
+                <a href="http://ucla.acts2fellowship.org/" target="_blank" class="about-section-btn">UCLA</a>
+                <p>Est. 2014</p>
+                <a href="http://www.a2firvine.org/" target="_blank" class="about-section-btn">UC Irvine</a>
+                <a href="http://www.a2fsdsu.org/#upcomingevents" target="_blank" class="about-section-btn">San Diego State</a>
+                <a href="http://ucsb.acts2fellowship.org/" target="_blank" class="about-section-btn">UC Santa Barbara</a>
+                <a href="http://www.acts2fellowship.org/usc" target="_blank" class="about-section-btn">USC</a>
+                <a href="http://acts2fellowship.org/pomona/" target="_blank" class="about-section-btn">Cal Poly Pomona</a>
             </div>
         </section>
         <section class="small-background-section">
@@ -73,7 +87,7 @@
                 <h2 class="small-background-title"><span>Find us on Social Media</span></h2>
                 <ul>
                     <li><a href="https://www.facebook.com/acts2fellowship" target="_blank" class="socials"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-                    <li><a href="https://a2fberkeley.tumblr.com" target="_blank" class="socials"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
+                    <li><a href="https://a2fberkeley.tumblr.com" class="socials" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
                 </ul>
             </div>
         </section>
