--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Videographer's Theme</title>
+    <title>Video Theme - Marvin Alcantara</title>
     <meta name="author" content="Marvin Alcantara">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
@@ -33,17 +33,15 @@
         <div class="big-background-container">
             <h1 class="big-background-title">Video Theme</h1>
             <div class="divider"></div>
-            <h1 id="colorize">Designer // Videographer // Blogger</h1>
+            <h1 id="colorize">Designer // Thinker</h1>
 <!--            <a href="index_static.html" class="big-background-btn">See my blog</a>-->
         </div>
     </section>
     <div class="wrapper">
     	<section class="about-section"><a name="about-me"></a>
             <div class="about-section-container">
-                <h2 class="about-section-title">Cognitive Science at Cal</h2>
-                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary
-                    perspective.Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and
-                    anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
+                <h2 class="about-section-title">About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl nunc, tincidunt vitae nunc id, tempor vulputate orci. Morbi non orci posuere, scelerisque nisi ut, egestas urna. Aenean felis lacus, cursus luctus auctor ut, ornare ut leo. Nullam sit amet nisl rutrum, elementum nisi eu, blandit orci. Nulla facilisi. Vivamus interdum facilisis urna, placerat mollis mi aliquet non. Fusce pellentesque nec libero at congue. Etiam vitae aliquet dolor, non pretium nisl.</p>
                 <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
             </div>
         </section>
@@ -65,20 +63,20 @@
                     God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek
                     answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together,
                     go on fun, memorable trips, and just “do life” together.</p>
-                <p>Est. 2006</p>
-                <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">UC Berkeley</a>
-                <p>Est. 2010</p>
+                <p class="colleges">Est. 2006  
+                <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">UC Berkeley</a></p>
+                <p class="colleges">Est. 2010  
                 <a href="http://minnesota.acts2fellowship.org/" target="_blank" class="about-section-btn">UMinn</a>
                 <a href="http://www.a2friverside.org/" target="_blank" class="about-section-btn">UC Riverside</a>
-                <a href="http://www.a2fucsd.org/" target="_blank" class="about-section-btn">UC San Diego</a>
-                <p>Est. 2013</p>
-                <a href="http://ucla.acts2fellowship.org/" target="_blank" class="about-section-btn">UCLA</a>
-                <p>Est. 2014</p>
+                <a href="http://www.a2fucsd.org/" target="_blank" class="about-section-btn">UC San Diego</a></p>
+                <p class="colleges">Est. 2013  
+                <a href="http://ucla.acts2fellowship.org/" target="_blank" class="about-section-btn">UCLA</a></p>
+                <p class="colleges">Est. 2014  
                 <a href="http://www.a2firvine.org/" target="_blank" class="about-section-btn">UC Irvine</a>
                 <a href="http://www.a2fsdsu.org/#upcomingevents" target="_blank" class="about-section-btn">San Diego State</a>
                 <a href="http://ucsb.acts2fellowship.org/" target="_blank" class="about-section-btn">UC Santa Barbara</a>
                 <a href="http://www.acts2fellowship.org/usc" target="_blank" class="about-section-btn">USC</a>
-                <a href="http://acts2fellowship.org/pomona/" target="_blank" class="about-section-btn">Cal Poly Pomona</a>
+                <a href="http://acts2fellowship.org/pomona/" target="_blank" class="about-section-btn">Cal Poly Pomona</a></p>
             </div>
         </section>
         <section class="small-background-section">
