Changes to atheme, style, index, i-static
Moved a2f section from index.html to index-static.html;
Changed nav to list sections;
Improved aesthetics;

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 <body>
     <section class="big-background">
         <nav>
-            <a href="#about-me">About Me</a>
-            <a href="#work">Work</a>
-            <a href="resume.html">Resume</a>
-            <a href="#about-a2f">A2F</a>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="resume.html">Resume</a></li>
+            </ul>
         </nav>
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
@@ -51,42 +52,6 @@
             	<h2 class="small-background-title"><span>See other themes I've been working on</span></h2>
                 <p/>
                 <a href="artist-theme.html" class="big-background-btn">Artists Theme</a>
-            </div>
-        </section>
-    </div>
-    <div class="wrapper">
-        <section class="about-section"><a name="a2f-about"></a>
-            <div class="about-section-container">
-                <h2 class="about-section-title">I'm part of <span id="a2f">acts2fellowship</span></h2>
-                <p><span id="a2f">acts2fellowship</span> (<span id="a2f">a2f</span>) is a student ministry that meets every week to
-                    study the Bible and build lasting friendships. College is the perfect time to explore the big questions of life like, "Does
-                    God exist?" and "What am I here for?" At <span id="a2f">a2f</span>, you'll find a safe place to ask those questions and seek
-                    answers alongside other college students. Throughout the week, we also hang out, eat lots of good food, study hard together,
-                    go on fun, memorable trips, and just “do life” together.</p>
-                <p class="colleges">Est. 2006  
-                <a href="http://www.a2fberkeley.org/" target="_blank" class="about-section-btn">UC Berkeley</a></p>
-                <p class="colleges">Est. 2010  
-                <a href="http://minnesota.acts2fellowship.org/" target="_blank" class="about-section-btn">UMinn</a>
-                <a href="http://www.a2friverside.org/" target="_blank" class="about-section-btn">UC Riverside</a>
-                <a href="http://www.a2fucsd.org/" target="_blank" class="about-section-btn">UC San Diego</a></p>
-                <p class="colleges">Est. 2013  
-                <a href="http://ucla.acts2fellowship.org/" target="_blank" class="about-section-btn">UCLA</a></p>
-                <p class="colleges">Est. 2014  
-                <a href="http://www.a2firvine.org/" target="_blank" class="about-section-btn">UC Irvine</a>
-                <a href="http://www.a2fsdsu.org/#upcomingevents" target="_blank" class="about-section-btn">San Diego State</a>
-                <a href="http://ucsb.acts2fellowship.org/" target="_blank" class="about-section-btn">UC Santa Barbara</a>
-                <a href="http://www.acts2fellowship.org/usc" target="_blank" class="about-section-btn">USC</a>
-                <a href="http://acts2fellowship.org/pomona/" target="_blank" class="about-section-btn">Cal Poly Pomona</a></p>
-            </div>
-        </section>
-        <section class="small-background-section">
-            <div class='pattern'></div>
-            <div class="small-background-container">
-                <h2 class="small-background-title"><span>Find us on Social Media</span></h2>
-                <ul>
-                    <li><a href="https://www.facebook.com/acts2fellowship" target="_blank" class="socials"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-                    <li><a href="https://a2fberkeley.tumblr.com" class="socials" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a></li>
-                </ul>
             </div>
         </section>
     </div>
