--- a/artist-theme.html
+++ b/artist-theme.html
@@ -20,9 +20,11 @@
 <body>
     <section class="big-background">
         <nav>
-            <a href="#about-section">About Me</a>
-            <a href="">Work</a>
-            <a href="">Resume</a>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="resume.html">Resume</a></li>
+            </ul>
         </nav>
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
