Changes to several files
Removed Lobster font support for pages that do not use it;
artist-theme.html removed Cog Sci section and inserted placeholder
paragraph instead;
Changed opacity of background in v_style.css;
Testing KaiTi font implementation;
Updated resume.html

--- a/artist-theme.html
+++ b/artist-theme.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,7 +7,7 @@
     <meta name="author" content="Marvin Alcantara">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900|Lobster' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css" media="all">
     <link rel="stylesheet" href="css/a_style.css" media="all">
     
@@ -38,11 +39,9 @@
     <div class="wrapper">
     	<section class="about-section">
             <div class="about-section-container">
-                <h2 class="about-section-title">Cognitive Science at Cal</h2>
-                <p>The Cognitive Science Program at Berkeley offers undergraduates the opportunity to explore the mind in interdisciplinary
-                    perspective.Courses in the program draw on psychology, linguistics, computer science, philosophy, neuroscience, and
-                    anthropology, among other fields, to illuminate how the human mind works, and why it works the way it does.</p>
-                <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
+                <h2 class="about-section-title">About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl nunc, tincidunt vitae nunc id, tempor vulputate orci. Morbi non orci posuere, scelerisque nisi ut, egestas urna. Aenean felis lacus, cursus luctus auctor ut, ornare ut leo. Nullam sit amet nisl rutrum, elementum nisi eu, blandit orci. Nulla facilisi. Vivamus interdum facilisis urna, placerat mollis mi aliquet non. Fusce pellentesque nec libero at congue. Etiam vitae aliquet dolor, non pretium nisl.</p>
+                <a href="works.html" target="_blank" class="about-section-btn">Check out my works</a>
             </div>
         </section>
         <section class="small-background-section">
