--- a/resume.html
+++ b/resume.html
@@ -20,9 +20,8 @@
 				<li>Prepared reports to be used in legal courts. Favorable outcomes for client on most reports.</li>
 			</ul>
 			<h4>Skills</h4>
-			<p>Languages: JavaScript, Python, HTML and CSS</p>
-			<p>Frameworks: .NET, Node.js, Django</p>
-			<p>Languages:
+			<p>Programming Languages: JavaScript, Python, HTML and CSS</p>
+			<p>Spoken Languages:
 			<ul>
 				<li>English</li>
 				<li>Español</li>
