Added lecture notes for classes
Added notes;
Made some changed to opacity in v-style.css;

--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css">
+		<link type="text/css" rel="stylesheet" href="css/normalize.css"
 		<title>Sample Resume | Marvin Alcantara</title>
 	</head>
 	<body>
@@ -14,26 +15,71 @@
 			<h4>Objective</h4>
 			<p>Take a position as a web designer.</p>
 			<h4>Experience</h4>
-			<p>Web Designer, Administrative Assitant | Austral Housing Inspections (June 2014 - August 2014)</p>
+            <p><strong>Web Designer, Administrative Assitant</strong> | Austral Housing Inspections | <em>Oakland, CA</em></p>
+            <p id="workdates">June 2004 - August 2014</p>
 			<ul>
-				<li>Designed and created website from scratch, noting the preferences of the intended audience.</li>
-				<li>Prepared reports to be used in legal courts. Favorable outcomes for client on most reports.</li>
+				<li>Designed and maintained business website</li>
+				<li>Prepared reports for legal cases regarding housing code infractions</li>
+				<li>Managed communications between law firms and the housing inspector</li>
+				<li>Managed payments to the housing inspector from law firms</li>
+			</ul>
+            <p><strong>Intern</strong> | WorkSource | <em>Hollywood, CA</em></p>
+            <p id="workdates">July 2011 - August 2011</p>
+			<ul>
+			    <li>Transcribed and translated career-building workshops for unemployed</li>
+			    <li>Translated courses on career development to middle to elder-aged minority populations</li>
+			    <li>Managed payroll for department, resolved disputes regarding payroll</li>
+			    <li>Managed physical database for all petitions for unemployment benefits</li>
+			</ul>
+            <p><strong>Tutor</strong> | AVID | <em>Berkeley, CA</em></p>
+            <p id="workdates">September 2011 - February 2012</p>
+			<ul>
+			    <li>Taught 7th and 8th grade underrepresented students core concepts in all subject areas</li>
+			    <li>Promoted academic success by facilitating discussion in an effort to promote thorough understanding of a subject area that a student had trouble understanding</li>
+			    <li>Developed leadership and interpersonal communication skills through experiences in group management, conflict resolution, and teamwork activites with kids, fellow tutors, and teachers</li>
+			</ul>
+            <p><strong>Head Houseman</strong> | Cleaning Colorado Company | <em>Vail, CO</em></p>
+            <p id="workdates">June 2010 - August 2010</p>
+			<ul>
+			    <li>Managed inventory for cleaning operations</li>
+			    <li>Maintained cleanliness in a 5-star hotel</li>
+			</ul>
+            <p><strong>Cashier, Bakery Assistant</strong> | Sheng Kee of California | <em>Berkeley, CA</em></p>
+            <p id="workdates">July 2013 - August 2014</p>
+			<ul>
+			    <li>Maintained constant supply of bread and drinks</li>
+			    <li>Maintained cleanliness in a food environment up to par with food safety regulations</li>
+			    <li>Provided information regarding all products to customers</li>
+			</ul>
+			<h4>Education</h4>
+            <p><strong>Cognitive Science, BA</strong> | UC Berkeley, 2017</p>
+			<ul>
+				<li id="edu">Emphasis in Human-Computer Interface and East-Asian Linguistics</li>
 			</ul>
 			<h4>Skills</h4>
-			<p>Programming Languages: JavaScript, Python, HTML and CSS</p>
-			<p>Spoken Languages:
+			<ul>
+			    <li>Teaching</li>
+			    <li>PowerPoint</li>
+			    <li>MS Word</li>
+			    <li>Photoshop</li>
+			    <li>Illustrator</li>
+			    <li>Windows XP, 7, 8, 8.1</li>
+			    <li>Excel</li>
+			</ul>
+			<p>Programming Languages:</p>
+            <ul>
+                <li>JavaScript</li>
+                <li>Python 2.7, 3.3</li>
+                <li>HTML</li>
+                <li>CSS2, CSS3</li>
+                <li>SASS</li>
+            </ul>
+            <p>Spoken Languages:</p>
 			<ul>
 				<li>English</li>
 				<li>Español</li>
 				<li id='asian'>中文</li>
 				<li id='asian'>日本語</li>
-			</ul>
-			</p>
-			<h4>Education</h4>
-			<p>BS, Cognitive Science | UC Berkeley, 2017</p>
-			<ul>
-				<li>Emphasis in Human-Computer Interface and East-Asian Linguistics</li>
-				<li>GPA: 3.8</li>
 			</ul>
 		</div>
 		<div id="footer">
